# remote_con

./: Cargo.toml  README.md  spec.txt
.claude/: settings.local.json
src/: main.rs
src/console/: attach.rs  mod.rs  read.rs  write.rs
src/process/: mod.rs
src/ui/: mod.rs
src/worker/: mod.rs
