[package]
name = "remote_con"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
] }
sysinfo = "0.33"
anyhow = "1.0"
crossbeam-channel = "0.5"
chrono = "0.4"
